config/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-hello-service
  labels:
    app: quarkus-hello-service
spec:
  host: quarkus-hello-service-dev2.ibmcloud-roks-q47i6y71-6ccd7f378ae819553d37d5f2ee142bd6-0000.us-east.containers.appdomain.cloud # Modify to use your FQDN e.g. <app-name>.apps.<clustername>.<domain>.
  tls:
    termination: edge # Relies on OpenShift setup with Let's Encrypt.
  to:
    kind: Service
    name: quarkus-hello-service
